--- a/.github/workflows/train_model.yml
+++ b/.github/workflows/train_model.yml
@@ -1,16 +1,18 @@
 name: Train and Convert Model
 
-on: [push]  # Runs every time you push code
+on:
+  workflow_dispatch:  # Manual trigger
+  push:               # Auto-trigger on push
 
 jobs:
   build:
-    runs-on: ubuntu-latest  # GitHub's Linux VM
+    runs-on: ubuntu-latest
     
     steps:
-    - uses: actions/checkout@v4  # Check out your repo code
+    - uses: actions/checkout@v4
     
     - name: Set up Python
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5
       with:
         python-version: '3.9'
     
@@ -31,7 +33,7 @@ jobs:
           ./tfjs_model
         
     - name: Upload model
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4  # Updated to v4
       with:
         name: tfjs-model
         path: tfjs_model/
